# deploy-db-hub

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.txt  complie-windosw.bat  findings.md  fix_appstyle.py  generate_infographic2.ps1  package-lock.json  package.json  progress.md  sc-build.bat  sc-package.bat  task_plan.md  vcpkg.json
.cursor/skills/design-aokan/: SKILL.md
.cursor/skills/design-web/: SKILL.md
.history/: .gitignore_20260629083421  .gitignore_20260629145141  CMakeLists_20260630093542.txt  check_raw_string_20260626085143.py  check_raw_string_20260626085205.py  check_raw_string_20260626085453.py  check_raw_string_20260630093542.py  extract_style_20260626093146.py  extract_style_20260626093157.py  extract_style_20260626093216.py  extract_style_20260630093542.py  sc-build_20260626172417.bat
.history/agent_memory/: progress_20260629083428.md  progress_20260629145143.md  progress_20260630093541.md
.history/src/ui/: MainWindow_20260630093555.cpp  MainWindow_20260630093555.h  RemoteFileViewerDialog_20260630093555.cpp  Theme_20260630093555.h  style_20260629083433.qss  style_20260629145148.qss  style_20260630093555.qss
agent_memory/: bugs.md  context.md  progress.md
docs/: README.md  deploy-hub-prd.md  deploy-hub-technical-design.md  dev-setup.md
docs/decisions/: 001-winrm-over-wrm4j.md  002-static-symlink-restart-reload-only.md
docs/guides/: ssh-linux-setup.md  winrm-setup.md
docs/schemas/: ai-settings.schema.json  deployment-record.schema.json  project-config.schema.json  server-config.schema.json
docs/schemas/examples/: linux-server-remote-files.json
docs/superpowers/plans/: 2026-06-22-ai-assist-integration.md  2026-06-22-top-module-tools.md  2026-06-27-deployment-ui-tool-style.md
docs/superpowers/specs/: 2026-06-27-deployment-ui-tool-style-design.md
docs/templates/: README.md  restart-linux-java.sh  restart-linux-nginx.sh  restart-windows-java.ps1  restart-windows-static.ps1
infographic/quarterly-reimbursement/: analysis.md  structured-content.md
infographic/quarterly-reimbursement/prompts/: infographic.md
resources/: app.qrc
scripts/: build-release.ps1  package-windows.ps1  restart-java.sh  stitch-deploy-screen.html  stitch-get-screen.ps1  stitch-list-projects.ps1  stitch-screen-output.json
src/adapters/ai/: OpenAiChatClient.cpp  OpenAiChatClient.h
src/adapters/git/: GitSourceProvider.cpp  GitSourceProvider.h
src/adapters/remote/: RemoteConnection.h  RemoteExecutor.cpp  RemoteExecutor.h  RemoteFileBrowser.cpp  RemoteFileBrowser.h  RemoteMonitor.cpp  RemoteMonitor.h  RemoteMonitorCommon.cpp  StubRemoteFileBrowser.cpp  StubRemoteFileBrowser.h  StubRemoteMonitor.cpp  StubRemoteMonitor.h  StubRemoteVfs.cpp  StubRemoteVfs.h
src/adapters/services/: JdbcSqlBridge.cpp  (+13 more)
src/app/: main.cpp
src/core/: DeployJob.cpp  DeployJob.h  DeployOrchestrator.cpp  DeployOrchestrator.h  DeploymentRecord.cpp  DeploymentRecord.h  DeploymentState.cpp  DeploymentState.h  Version.cpp  Version.h
src/infra/: AiSettingsStore.cpp  AiSettingsStore.h  AppBranding.cpp  AppBranding.h  AppSettingsStore.cpp  AppSettingsStore.h  ArtifactMatcher.cpp  ArtifactMatcher.h  ConfigStore.cpp  ConfigStore.h  ConfigValidator.cpp  ConfigValidator.h  CredentialSessionCache.cpp  CredentialSessionCache.h  CredentialStore.cpp  CredentialStore.h  DataPaths.cpp  DataPaths.h  JdkProfileStore.cpp  JdkProfileStore.h  LocalLogCatalog.cpp  LocalLogCatalog.h  LogPath.cpp  LogPath.h  LogSanitizer.cpp  LogSanitizer.h  LogWriter.cpp  LogWriter.h  ProcessOutputDecoder.cpp  ProcessOutputDecoder.h  ProjectServiceConfig.cpp  ProjectServiceConfig.h  RemoteLogPath.cpp  RemoteLogPath.h  RemoteOutputCleaner.cpp  RemoteOutputCleaner.h  ServiceDefaults.cpp  ServiceDefaults.h  ServiceInstanceStore.cpp  ServiceInstanceStore.h  (+4 more)
src/qml/: AppShellController.cpp  AppShellController.h  LineTabBarController.cpp  LineTabBarController.h  QmlAppBootstrap.cpp  QmlAppBootstrap.h  QmlEngineProvider.cpp  QmlEngineProvider.h  QmlPerfConfig.cpp  QmlPerfConfig.h  UuidToolController.cpp  UuidToolController.h  WidgetHostItem.cpp  WidgetHostItem.h  deploy-hub-qml.qrc
src/tools/: CommonTools.cpp  CommonTools.h  OpenAiStreamParser.cpp  OpenAiStreamParser.h
src/ui/: AiAssistHelper.cpp  AiAssistHelper.h  AiChatWidget.cpp  AiChatWidget.h  AiStreamBuffer.cpp  AiStreamBuffer.h  AppStyle.cpp  AppStyle.h  BigDataManagerWidget.cpp  BigDataManagerWidget.h  CommonToolsWidget.cpp  CommonToolsWidget.h  DatabaseManagerWidget.cpp  DatabaseManagerWidget.h  DeployLogPathOptions.cpp  DeployLogPathOptions.h  DeployWorker.cpp  DeployWorker.h  DeploymentLogDialog.cpp  DeploymentLogDialog.h  DeploymentLogOpener.cpp  DeploymentLogOpener.h  HttpRequestWidget.cpp  HttpRequestWidget.h  JdkProfileDialog.cpp  JdkProfileDialog.h  LogAiAnalysisWidget.cpp  LogAiAnalysisWidget.h  MainWindow.cpp  MainWindow.h  MiniWebSocket.cpp  MiniWebSocket.h  PageLayout.cpp  PageLayout.h  PathPickerWidget.cpp  PathPickerWidget.h  ProjectDialog.cpp  ProjectDialog.h  ProjectManagerWidget.cpp  ProjectManagerWidget.h  (+57 more)
tests/unit/: AiAssistHelperTest.cpp  AiAssistHelperTest.h  AiSettingsStoreTest.cpp  AiSettingsStoreTest.h  AppSettingsStoreTest.cpp  AppSettingsStoreTest.h  AppStyleTest.cpp  AppStyleTest.h  ArtifactMatcherTest.cpp  ArtifactMatcherTest.h  CommonToolsTest.cpp  CommonToolsTest.h  ConfigStoreTest.cpp  ConfigStoreTest.h  ConfigValidatorTest.cpp  ConfigValidatorTest.h  DeployJobTest.cpp  DeployJobTest.h  DeployLogPathOptionsTest.cpp  DeployLogPathOptionsTest.h  DeployOrchestratorTest.cpp  DeployOrchestratorTest.h  DeploymentRecordTest.cpp  DeploymentRecordTest.h  ElasticsearchIndexOrganizeTest.cpp  ElasticsearchIndexOrganizeTest.h  GitSourceProviderTest.cpp  GitSourceProviderTest.h  JdkProfileStoreTest.cpp  JdkProfileStoreTest.h  KafkaTopicParseTest.cpp  KafkaTopicParseTest.h  LocalLogCatalogTest.cpp  LocalLogCatalogTest.h  LogPathTest.cpp  LogPathTest.h  LogSanitizerTest.cpp  LogSanitizerTest.h  MainWindowStartupTest.cpp  MainWindowStartupTest.h  (+23 more)
tools/jdbc-sql-runner/: JdbcSqlRunner.java
tools/kafka-admin-runner/: KafkaAdminRunner.java
(+104 files in other folders)
